gccida/g0/build_insn_chain
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2277:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+60h] [rbp-30h] 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2277:20: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2277:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+60h] [rbp-30h] 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2278:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+68h] [rbp-28h] 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2278:16: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2278:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+68h] [rbp-28h] 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2297:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2303:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2307:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ <= 1 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2309:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2309:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2310:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2315:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2317:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~mask_; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2318:37: error: invalid suffix 'xnum_' on integer constant
i = ( ( 2 * ptr_->indx + *(short *)0xnum_) << 6) + bit_num_; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2325:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2332:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2334:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2349:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = first[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                     ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2354:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( link->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/global.c:2366:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link_0 = first[3].fld[0].rtx; link_0; link_0 = ( rtx)link_0[1] ) 
                                                           ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_insn_chain/src/obj/global.o] Error 1
